# haskell-socket-unix

./: CHANGELOG.md  README.md  index.html  socket-unix.cabal  stack-ghc8.10.7.yaml  stack-ghc8.4.4.yaml  stack-ghc8.6.5.yaml  stack-ghc8.8.4.yaml  stack-ghc9.0.2.yaml  stack-ghc9.10.3.yaml  stack-ghc9.2.8.yaml  stack-ghc9.4.8.yaml  stack-ghc9.6.4.yaml  stack-ghc9.6.6.yaml  stack-ghc9.6.7.yaml  stack-ghc9.8.4.yaml  stack.yaml
.github/workflows/: ci.yml  release.yml
0.2.1.0/: doc-index.html
scripts/: generate-index.sh
v0.2.1.0/: System-Socket-Family-Unix.html  socket-unix.haddock  socket-unix.txt
v0.2.1.0/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
v0.2.1.0/x86_64-linux/ghc-9.8.4/socket-unix-0.2.1.0/: setup-config
v0.2.1.0/x86_64-linux/ghc-9.8.4/socket-unix-0.2.1.0/cache/: config
v0.2.1.0/x86_64-linux/ghc-9.8.4/socket-unix-0.2.1.0/doc/html/socket-unix/: index.html
