name:                socket-unix
version:             0.3.0.0
synopsis:            Unix domain sockets
description:         A Unix domain socket extension for the socket library
homepage:            https://github.com/vyacheslavhashov/haskell-socket-unix#readme
license:             MIT
license-file:        LICENSE
author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com
copyright:           2017 Vyacheslav Hashov
category:            System, Network
stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  if os(linux)
    hs-source-dirs:    platform/linux
  if os(osx) || os(darwin) || os(freebsd) || os(openbsd) || os(netbsd) || os(solaris)
    hs-source-dirs:    platform/unix
  exposed-modules:     System.Socket.Family.Unix
  other-modules:       System.Socket.Family.Unix.Internal
                       System.Socket.Family.Unix.Platform
  build-depends:
      base
    , socket
    , bytestring

  ghc-options:
    -Wall
    -O2
  default-language:    GHC2021

test-suite default
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  if os(linux)
    hs-source-dirs:    platform_test/linux
  if os(osx) || os(darwin) || os(freebsd) || os(openbsd) || os(netbsd) || os(solaris)
    hs-source-dirs:    platform_test/unix
  main-is:             test.hs
  other-modules:       Internal
                       Platform
  build-depends:
      base
    , socket
    , socket-unix
    , tasty
    , tasty-hunit
    , bytestring
    , unix
    , async
  default-language:    GHC2021

test-suite threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  if os(linux)
    hs-source-dirs:    platform_test/linux
  if os(osx) || os(darwin) || os(freebsd) || os(openbsd) || os(netbsd) || os(solaris)
    hs-source-dirs:    platform_test/unix
  main-is:             test.hs
  other-modules:       Internal
                       Platform
  build-depends:
      base
    , socket
    , socket-unix
    , tasty
    , tasty-hunit
    , bytestring
    , unix
    , async
  ghc-options:         -threaded
  default-language:    GHC2021

source-repository head
  type:     git
  location: https://github.com/vyacheslavhashov/haskell-socket-unix
